# wasm-md-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  github-markdown.css  index.css  index.html  package-lock.json  package.json  trunk.toml  tsconfig.json  webpack.config.js
.github/workflows/: gh-pages.yml
doc/: README.md  tauri.md
docs/: wasm-md-editor-c2dd0fb0d30fd9e7.js
src/: components.rs  index.tsx  lib.rs  main.rs  pages.rs
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Home.rs  Text.rs  editor.rs  home.rs  markdown.rs  not_found.rs  raw_html.rs  text.rs
src/components/Textarea/: index.tsx
src/pages/: top.rs
wasm-markdown-editor/: .gitignore  package-lock.json
wasm-markdown-editor/src/: index.tsx
wasm-markdown-editor/wasm-md-editor/: Cargo.toml
wasm-md-editor/: Cargo.toml  README.md
wasm-md-editor/src/: lib.rs
