[package]
name = "wasm-md-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.57"
pulldown-cmark =  "0.9.1"
yew = "0.19"
yew-router = "0.16.0"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2.80"
stylist = {version = "0.10", features = ["yew_integration"]}
