[package]
name = "wasm-md-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
js-sys = "0.3.57"
pulldown-cmark =  "0.9.1"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2.84"
stylist = {version = "0.11.0", features = ["yew_integration"]}
