[package]
name = "wasm-md-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
pulldown-cmark =  "0.9.1"

[dependencies.web-sys]
features = [
    'Window',
]
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

version = "0.3.57"